CLOUDIFY-1216 added testng plugin
git-svn-id: svn://pc-lab14/SVN/cloudify/trunk/quality/frameworks/SGTest@133391 eb64e737-3616-4df0-8941-5ee2ae88103d